Re #61: Added rejection rules that JSR/RET cannot be present
-we will probably expand this set in the future, but these were some obvious candidates